[tool.poetry]
name = "powergim"
version = "0.1"
description = "Power Grid Investment Module (PowerGIM)"
authors = ["Harald G Svendsen <harald.svendsen@sintef.no>"]
license = "MIT License (http://opensource.org/licenses/MIT)"
readme = "README.md"
homepage = "https://github.com/sintef/powergim"
repository = "https://github.com/sintef/powergim"
classifiers=[
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23.0"
pandas = "^1.5.0"
PyYAML = "^6.0"
Pyomo = "^6.4.2"
mpi-sppy = "^0.11.1"
mpi4py = "^3.1.1"
scipy = "^1.9.1"
matplotlib = {version = "^3.6.0", optional = true}
plotly = {version = "^5.10.0", optional = true}
seaborn = {version = "^0.12.0", optional = true}
ipywidgets = {version = "^8", optional = true}
ipython = {version = "^8", optional = true}
pydantic = "^1.10.0"
jupyterlab = "^3.4.7"
scikit-learn = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6"
mypy = ">=0.96"
pylint = "^2"
black = "^22"
nbmake = "^1"
bandit = "^1.7.4"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
