[project]
name = "powergim"
version = "1.1.0"
description = "Power Grid Investment Module (PowerGIM)"
authors = [
  {name="Harald G Svendsen", email="harald.svendsen@sintef.no"}, 
  {name="Martin Kristiansen"},
  {name="Spyridon Chapaloglou"},
  ]
license = { text = "MIT" }
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
  "numpy >=1.23.0",
  "pandas >=1.5.0",
  "Pyomo >=6.4.2",
  "mpi-sppy >=0.11.1",
  "mpi4py >=3.1.1",
  "scipy >=1.9.1",
  "ipywidgets >=8",
  "pydantic >=1.10.0",
  "jupyterlab >=3.4.7",
  "scikit-learn >=1.1.2",
  "openpyxl >=3.0.10",
  "geopandas >=0.12.1",
  "cloudpickle >=2.2.0",
  "networkx >=3.0",
   "highspy >=1.9.0",
   "ruamel-yaml (>=0.18.10,<0.19.0)",
]

[project.optional-dependencies]
plotting = ["matplotlib","seaborn", "plotly", "folium", "branca", "jinja2"]

[project.urls]
repository = "https://github.com/powergama/powergim"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
mypy = ">=0.96"
pylint = "^2"
black = "22.08.0"
nbmake = "^1"
bandit = "^1.7.4"
flake8 = "^5.0.4"
setuptools = "^65.6.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[pytest]
pythonpath = "tests/stochastic"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''